--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </div>
       </div>
 
-      <div class="hero_search_box he-box">
+      <div class="hero_search_box he-box d-none">
         <div class="container">
           <div class="he-box__inner">
             <button class="he-box__remBtn">Back</button>
